db and docker-compose configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.secrets.toml
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,venv,vim,visualstudiocode,macos,linux,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,venv,vim,visualstudiocode,macos,linux,windows
 
