--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,12 +4,15 @@ ENV APP_HOME=/home/app/api
 WORKDIR $APP_HOME
 COPY . $APP_HOME
 
-RUN groupadd app && useradd -g app app \
-  && pip install -r requirements-dev.txt \
-  && pip install -e . \
-  && chown -R app:app $APP_HOME
+RUN pip install -r requirements-dev.txt \
+  && pip install -e .
 
-USER app
+#RUN groupadd app && useradd -g app app \
+#  && pip install -r requirements-dev.txt \
+#  && pip install -e . \
+#  && chown -R app:app $APP_HOME
+#
+#USER app
 
 CMD ["uvicorn", "pamps.app:app", "--host=0.0.0.0", "--port=8000", "--reload"]
 
