--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,6 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DBS=pamps, pampts_test
+      - POSTGRES_DBS=pamps, pamps_test
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
